// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product should render properly with no similarProducts  1`] = `
<styled.div>
  <styled.h1>
    name
  </styled.h1>
  <styled.h3>
    REF. code
  </styled.h3>
  <styled.div>
    <ImageSlider
      alt="name"
      imageIDList={
        Immutable.List [
          "image1",
        ]
      }
      imageOptions={
        Object {
          "crop": "fit",
          "height": 1080,
          "width": 1080,
        }
      }
    />
  </styled.div>
  <ProductInfo
    descriptions={
      Immutable.List [
      ]
    }
    marketingDescriptions={
      Immutable.Map {
      }
    }
    productType="descriptionType"
  />
  <styled.div />
  <styled.div>
    <ProductInfoBadge
      allStoreStock={
        Immutable.List [
        ]
      }
      currentStoreStock={
        Immutable.Map {
          storeStock: 0,
          stockStatus: "notAvailable",
        }
      }
      loyaltyProgram={
        Immutable.Map {
        }
      }
      marketingAttributes={
        Immutable.Map {
        }
      }
      price={
        Immutable.Map {
        }
      }
      pricingInfo={
        Immutable.Map {
        }
      }
      productCode="code"
      productName="name"
      productSlug="slug"
    />
  </styled.div>
</styled.div>
`;

exports[`Product should render properly with similarProducts  1`] = `
<styled.div>
  <styled.h1>
    name
  </styled.h1>
  <styled.h3>
    REF. code
  </styled.h3>
  <styled.div>
    <ImageSlider
      alt="name"
      imageIDList={
        Immutable.List [
          "image1",
        ]
      }
      imageOptions={
        Object {
          "crop": "fit",
          "height": 1080,
          "width": 1080,
        }
      }
    />
  </styled.div>
  <ProductInfo
    descriptions={
      Immutable.List [
      ]
    }
    marketingDescriptions={
      Immutable.Map {
      }
    }
    productType="descriptionType"
  />
  <styled.div>
    <SimilarProducts
      similarProducts={
        Immutable.List [
          Immutable.Map {
            code: "prod1",
          },
        ]
      }
      title="anche"
    />
  </styled.div>
  <styled.div>
    <ProductInfoBadge
      allStoreStock={
        Immutable.List [
        ]
      }
      currentStoreStock={
        Immutable.Map {
          storeStock: 0,
          stockStatus: "notAvailable",
        }
      }
      loyaltyProgram={
        Immutable.Map {
        }
      }
      marketingAttributes={
        Immutable.Map {
        }
      }
      price={
        Immutable.Map {
        }
      }
      pricingInfo={
        Immutable.Map {
        }
      }
      productCode="code"
      productName="name"
      productSlug="slug"
    />
  </styled.div>
</styled.div>
`;

exports[`Product should return null when productInfo is empty 1`] = `null`;
